samples/_failures_safe/1761697430_c9a51b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05010934.c: In function ‘main’:
./samples/SAFE/__tmp_05010934.c:159:13: error: expected ‘;’ at end of input
  159 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_05010934.c:159:5: error: expected declaration or statement at end of input
  159 |     return 0
      |     ^~~~~~
